--- a/examples/PlottingExample-2.ipynb
+++ b/examples/PlottingExample-2.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,9 +62,10 @@
     "\n",
     "# find 0K minimum\n",
     "i_start = plotting_data[0][y_key].argmin()\n",
+    "starting_point = plotting_data[0][x_key][i_start]\n",
     "\n",
     "# integrate all data from this minimum (inc. error bars)\n",
-    "plotting_data,x_key,y_key = p.plotting_data(starting_point=plotting_data[0][x_key][i_start])\n",
+    "plotting_data,x_key,y_key = p.plotting_data(starting_point=starting_point)\n",
     "\n",
     "# Plotting\n",
     "fig = plt.figure(figsize=(5,4))\n",
